--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@
 @import url("/common/css/vars.css");
 
 @keyframes fade-in {
-    from {filter: opacity(0);}
-    to   {filter: opacity(1);}
+\tfrom {filter: opacity(0);}
+\tto   {filter: opacity(1);}
 }
 
 
@@ -17,12 +17,12 @@ html, body {
 
 body {
 
-    padding: 0;
+\tpadding: 0;
 	margin:  0;
-    background: var(--white);
+\tbackground: var(--white);
 	color: var(--black);
-    font-family: "Roboto", sans-serif;
-    font-size: 13pt;
+\tfont-family: "Roboto", sans-serif;
+\tfont-size: 13pt;
 
 }
 
@@ -32,7 +32,7 @@ header {
 	position: fixed;
 	top: 0;
 	font-size: 1.5em;
-    padding: 22px 1em 22px 80px;
+	padding: 22px 1em 22px 80px;
 	background: var(--translucent-light-gray);
 	outline: 1px solid var(--translucent-mid-gray1);
 
@@ -47,10 +47,10 @@ header, footer {
 
 footer {
 
-    background: var(--translucent-light-gray);
-    outline: 1px solid var(--translucent-mid-gray1);
+\tbackground: var(--translucent-light-gray);
+\toutline: 1px solid var(--translucent-mid-gray1);
 	text-align: center;
-    padding: 2em 1em 4em;
+\tpadding: 2em 1em 4em;
 
 }
 
@@ -64,7 +64,7 @@ footer {
 
 #card-container-container { /* For dynamic side margins */
 
-    display: flex;
+\tdisplay: flex;
 	flex-direction: column;
 	align-items: center;
 	animation: fade-in 1s;
